--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "cache-manager": "^5.1.4",
+    "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "install": "^0.13.0",
     "joi": "^17.7.0",
     "mongoose": "^6.8.2",
     "reflect-metadata": "^0.1.13",
