--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@jobhunter/api/core": ["libs/api/core/src/index.ts"],
-      "@jobhunter/api/job": ["libs/api/job/src/index.ts"]
+      "@jobhunter/api/job": ["libs/api/job/src/index.ts"],
+      "@jobhunter/api/shared": ["libs/api/shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
