feat(api): setup up user schema and module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@jobhunter/api/core": ["libs/api/core/src/index.ts"],
       "@jobhunter/api/job": ["libs/api/job/src/index.ts"],
-      "@jobhunter/api/shared": ["libs/api/shared/src/index.ts"]
+      "@jobhunter/api/shared": ["libs/api/shared/src/index.ts"],
+      "@jobhunter/api/user": ["libs/api/user/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
