--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "bcryptjs": "^2.4.3",
     "cache-manager": "^5.1.4",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
