feat(api): implemented auth endpoint
added login,signup,me,refesh and logout enpoints

--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^5.1.4",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "install": "^0.13.0",
     "joi": "^17.7.0",
     "mongoose": "^6.8.2",
     "mongoose-slug-generator": "^1.0.4",
     "node-geocoder": "^4.2.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "slugify": "^1.6.5",
@@ -37,6 +43,7 @@
     "@nrwl/workspace": "15.4.4",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/passport-jwt": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cz-conventional-changelog": "3.3.0",
