--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@jobhunter/api/auth": ["libs/api/auth/src/index.ts"],
       "@jobhunter/api/core": ["libs/api/core/src/index.ts"],
       "@jobhunter/api/job": ["libs/api/job/src/index.ts"],
       "@jobhunter/api/shared": ["libs/api/shared/src/index.ts"],
