--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@jobhunter/api/auth": ["libs/api/auth/src/index.ts"],
       "@jobhunter/api/core": ["libs/api/core/src/index.ts"],
       "@jobhunter/api/job": ["libs/api/job/src/index.ts"],
+      "@jobhunter/api/mail": ["libs/api/mail/src/index.ts"],
       "@jobhunter/api/shared": ["libs/api/shared/src/index.ts"],
       "@jobhunter/api/user": ["libs/api/user/src/index.ts"]
     }
