--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -19,13 +20,17 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "handlebars": "^4.7.7",
     "install": "^0.13.0",
+    "ioredis": "^5.2.4",
     "joi": "^17.7.0",
     "mongoose": "^6.8.2",
     "mongoose-slug-generator": "^1.0.4",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "slugify": "^1.6.5",
@@ -41,8 +46,10 @@
     "@nrwl/nest": "15.4.4",
     "@nrwl/node": "15.4.4",
     "@nrwl/workspace": "15.4.4",
+    "@types/cache-manager": "^4.0.2",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
